--- a/Estilo.css
+++ b/Estilo.css
@@ -166,6 +166,8 @@ header {
     border: solid 5px rgb(238, 244, 247);
 }
 
+
+
 .Quadrado {
     color:rgb(255, 255, 255);
     text-align:left;
@@ -174,10 +176,12 @@ header {
     height:auto;
 }
 
+
 .Quadrado h1, h2 {
     text-align: center;
     font-size: 3rem 2rem;
 }
+
 
 .Quadrado p {
     text-align: center;
@@ -192,6 +196,23 @@ header {
     border: solid 5px rgb(238, 244, 247);
 }
 
+
+/*Contacta-me*/
+
+.contacta-me{
+	width: 100%;
+	height: 150px;
+	background:#525252;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	justify-content: center;
+}
+.contacta-me p{
+	color: white;
+	font-size: 25px;
+	margin-bottom: 25px;
+}
 
 
 
@@ -315,10 +336,37 @@ header {
 
 
 @media(max-width:700px) {
-    .row {
+    .roww {
         flex-direction: column;
     }
 }
+
+
+
+
+
+/*Motivação*/
+
+
+footer {
+	position: relative;
+	width: 100%;
+	height: 150px;
+	background: #101010;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+footer p:nth-child(1){
+	font-size: 25px;
+	color: white;
+	margin-bottom: 20px;
+}
+
+
+
+
 
 
 
@@ -395,4 +443,3 @@ form button {
     cursor: pointer;
     text-decoration: none;
 }
-
